syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_environment;
message DsEnvironmentBean {

     int32  id= 1;
     int64  code= 2;
     optional string name= 3;
     optional string config=4 ;
     optional string  description= 5;
     optional int32  operator= 6;
     optional string  create_time=7 ;
     optional string  update_time= 8;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsEnvironmentBeanService {
  rpc ListDsEnvironmentBeans(ListDsEnvironmentBeansRequest) returns (ListDsEnvironmentBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsEnvironmentBeans"
    };
  }

  rpc GetDsEnvironmentBean(GetDsEnvironmentBeanRequest) returns (DsEnvironmentBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsEnvironmentBeans/*}"
    };
  }

  rpc CreateDsEnvironmentBean(CreateDsEnvironmentBeanRequest) returns (DsEnvironmentBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsEnvironmentBeans"
      body: "DsEnvironmentBean"
    };
  }

  rpc UpdateDsEnvironmentBean(UpdateDsEnvironmentBeanRequest) returns (DsEnvironmentBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsEnvironmentBean.name=DsEnvironmentBeans/*}"
      body: "DsEnvironmentBean"
    };
  }

  rpc DeleteDsEnvironmentBean(DeleteDsEnvironmentBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsEnvironmentBeans/*}"
    };
  }
}

// message DsEnvironmentBean {
// ! This should be defined elsewhere
// }

message ListDsEnvironmentBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsEnvironmentBeansResponse {
  // The field name should match the noun "DsEnvironmentBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsEnvironmentBean DsEnvironmentBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsEnvironmentBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsEnvironmentBeanRequest {
  // The parent resource name where the DsEnvironmentBean is to be created.
  string parent = 1;

  // The DsEnvironmentBean id to use for this DsEnvironmentBean.
  string DsEnvironmentBean_id = 2;

  // The DsEnvironmentBean resource to create.
  // The field name should match the Noun in the method name.
  DsEnvironmentBean DsEnvironmentBean = 3;
}

message UpdateDsEnvironmentBeanRequest {
  // The DsEnvironmentBean resource which replaces the resource on the server.
  DsEnvironmentBean DsEnvironmentBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsEnvironmentBeanRequest {
  // The resource name of the DsEnvironmentBean to be deleted.
  string name = 1;
}
